fixed the navbar overflow

--- a/src/components/navbar/navbar.module.css
+++ b/src/components/navbar/navbar.module.css
@@ -34,7 +34,7 @@
   }
 
   .sideNavbar {
-    display: block;
+    display: inline;
   }
 
   .toggleMenu {
@@ -103,11 +103,11 @@
     height: calc(100vh - 100px);
     position: absolute;
     top: 10%;
-    right: 0%;
+    left: 0;
     background-color: #53c28b;
     color: #111;
     padding: 1rem 0 0;
-    transform: translateX(100%);
+    transform: translateX(-100%);
     transition: transform 300ms cubic-bezier(0.5, 0, 0.5, 1);
     z-index: 9;
   }
